[package]
name = "http-ntlm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
strict = []

[dependencies]
nom = "7"
log = "0.4"
env_logger = "0.9"
rand = { version = "0.8", features = ["getrandom"] }
des = "0.8"
md4 = "0.10"
md-5 = "0.10"
hmac = "0.12"
rc4 = "0.1"
anyhow = "1"
hex = "0.4"

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.43", features = ["Win32_Security_Authentication_Identity", "Win32_Foundation", "Win32_Security_Credentials"] }

[dev-dependencies]
pretty_assertions = "1"
base64 = "0.13"


